<resources>
    <string name="app_name" translatable="false">DomiNations\' Museum Crawler</string>
    <string name="add_rule">Add Rule</string>
    <string name="amount_matched">Amount Matches</string>
    <string name="category">Category</string>
    <string name="delete_rule">Delete Rule</string>
    <string name="edit_rule">Edit Rule</string>
    <string name="exit">Exit</string>
    <string name="id">Id</string>
    <string name="keep_3_artifacts">Keep 3* artifacts</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="start_service">Start Service</string>
    <string name="debug_mode">Debug Mode</string>
    <string name="artifact_benefits">Artifact Benefits</string>
    <string name="confirm_button_text">Yes</string>
    <string name="continue_button_text">Continue</string>
    <string name="five_artifacts_button_text" translatable="false">475</string>
    <string name="sell_button_prefix">Sell for</string>
    <string-array name="array_categories">
        <item>Weapon</item>
        <item>Armor</item>
        <item>Jewelry</item>
        <item>Pottery</item>
        <item>War Weapon</item>
        <item>War Armor</item>
        <item>War Equipment</item>
    </string-array>
    <string-array name="array_amount_matches">
        <item>1 of 5</item>
        <item>2 of 5</item>
        <item>3 of 5</item>
        <item>4 of 5</item>
        <item>5 of 5</item>
    </string-array>
    <string-array name="array_languages">
        <item>English</item>
        <item>Deutsch</item>
    </string-array>
    <string name="keep_3_no">No</string>
    <string name="keep_3_food_gold">Only food/gold</string>
    <string name="keep_3_yes">Yes</string>
    <string name="EnemyDefenderSpawnTime">Enemy Defender Spawn Time</string>
    <string name="DefenderSpawnTime">Defender Spawn Time</string>
    <string name="HeavyInfantryHitpoints">Heavy Infantry Hitpoints</string>
    <string name="RangedInfantryHitpoints">Ranged Infantry Hitpoints</string>
    <string name="HeavyCavalryHitpoints">Heavy Cavalry Hitpoints</string>
    <string name="RaiderHitpoints">Raider Hitpoints</string>
    <string name="WallSapperHitpoints">Wall Sapper Hitpoints</string>
    <string name="SupplyVehicleHitpoints">Supply Vehicle Hitpoints</string>
    <string name="RangedSiegeHitpoints">Ranged Siege Hitpoints</string>
    <string name="MortarTroopHitpoints">Mortar Troop Hitpoints</string>
    <string name="AttackHelicoptersHitpoints">Attack Helicopter Hitpoints</string>
    <string name="MachineGunInfantryHitpoints">Machine Gun Infantry Hitpoints</string>
    <string name="GuerrillaHitpoints">Guerrilla Hitpoints</string>
    <string name="HeavyTankHitpoints">Heavy Tank Hitpoints</string>
    <string name="BazookaHitpoints">Bazooka Hitpoints</string>
    <string name="APCHitpoints">APC Hitpoints</string>
    <string name="ArmoredCarHitpoints">Armored Car Hitpoints</string>
    <string name="TacticalHelicopterHitpoints">Tactical Helicopter Hitpoints</string>
    <string name="MRLHitpoints">MRL Hitpoints</string>
    <string name="FighterHitpoints">Fighter Hitpoints</string>
    <string name="BomberHitpoints">Bomber Hitpoints</string>
    <string name="ParatroopersFromTransportsHitpoints">Paratrooper Hitpoints</string>
    <string name="GeneralsHitpoints">Generals\' Hitpoints</string>
    <string name="HeavyInfantryDamage">Heavy Infantry Damage</string>
    <string name="RangedInfantryDamage">Ranged Infantry Damage</string>
    <string name="HeavyCavalryDamage">Heavy Cavalry Damage</string>
    <string name="RaiderDamage">Raider Damage</string>
    <string name="WallSapperDamage">Wall Sapper Damage</string>
    <string name="SupplyVehicleHealing">Supply Vehicle Healing</string>
    <string name="RangedSiegeDamage">Ranged Siege Damage</string>
    <string name="MortarTroopDamage">Mortar Troop Damage</string>
    <string name="AttackHelicoptersDamage">Attack Helicopter Damage</string>
    <string name="MachineGunInfantryDamage">Machine Gun Infantry Damage</string>
    <string name="GuerrillaDamage">Guerrilla Damage</string>
    <string name="HeavyTankDamage">Heavy Tank Damage</string>
    <string name="BazookaDamage">Bazooka Damage</string>
    <string name="APCDamage">APC Damage</string>
    <string name="ArmoredCarDamage">Armored Car Damage</string>
    <string name="TacticalHelicopterHealing">Tactical Helicopter Healing</string>
    <string name="MRLDamage">MRL Damage</string>
    <string name="FighterDamage">Fighter Damage</string>
    <string name="BomberDamage">Bomber Damage</string>
    <string name="ParatroopersFromTransportsDamage">Paratrooper Damage</string>
    <string name="GeneralsDamage">Generals\' Damage</string>
    <string name="DefenderHitpoints">Defender Hitpoints</string>
    <string name="DefenderDamage">Defender Damage</string>
    <string name="InvadingHeavyInfantryHitpoints">Invading Heavy Infantry Hitpoints</string>
    <string name="InvadingRangedInfantryHitpoints">Invading Ranged Infantry Hitpoints</string>
    <string name="InvadingHeavyCavalryHitpoints">Invading Heavy Cavalry Hitpoints</string>
    <string name="InvadingRaiderHitpoints">Invading Raider Hitpoints</string>
    <string name="InvadingWallSapperHitpoints">Invading Wall Sapper Hitpoints</string>
    <string name="InvadingSupplyVehicleHitpoints">Invading Supply Vehicle Hitpoints</string>
    <string name="InvadingRangedSiegeHitpoints">Invading Ranged Siege Hitpoints</string>
    <string name="InvadingMortarTroopHitpoints">Invading Mortar Troop Hitpoints</string>
    <string name="InvadingAttackHelicoptersHitpoints">Invading Attack Helicopter Hitpoints</string>
    <string name="InvadingMachineGunInfantryHitpoints">Invading Machine Gun Infantry Hitpoints</string>
    <string name="InvadingGuerrillaHitpoints">Invading Guerrilla Hitpoints</string>
    <string name="InvadingHeavyTankHitpoints">Invading Heavy Tank Hitpoints</string>
    <string name="InvadingBazookaHitpoints">Invading Bazooka Hitpoints</string>
    <string name="InvadingAPCHitpoints">Invading APC Hitpoints</string>
    <string name="InvadingArmoredCarHitpoints">Invading Armored Car Hitpoints</string>
    <string name="InvadingTacticalHelicopterHitpoints">Invading Tactical Helicopter Hitpoints</string>
    <string name="InvadingMRLHitpoints">Invading MRL Hitpoints</string>
    <string name="InvadingFighterHitpoints">Invading Fighter Hitpoints</string>
    <string name="InvadingBomberHitpoints">Invading Bomber Hitpoints</string>
    <string name="InvadingParatroopersFromTransportsHitpoints">Invading Paratrooper Hitpoints</string>
    <string name="InvadingGeneralsHitpoints">Invading Generals Hitpoints</string>
    <string name="InvadingHeavyInfantryDamage">Invading HeavyInfantry Damage</string>
    <string name="InvadingRangedInfantryDamage">Invading Ranged Infantry Damage</string>
    <string name="InvadingHeavyCavalryDamage">Invading Heavy Cavalry Damage</string>
    <string name="InvadingRaiderDamage">Invading Raider Damage</string>
    <string name="InvadingWallSapperDamage">Invading Wall Sapper Damage</string>
    <string name="InvadingSupplyVehicleHealing">Invading Supply Vehicle Healing</string>
    <string name="InvadingRangedSiegeDamage">Invading Ranged Siege Damage</string>
    <string name="InvadingMortarTroopDamage">Invading Mortar Troop Damage</string>
    <string name="InvadingAttackHelicoptersDamage">Invading Attack Helicopter Damage</string>
    <string name="InvadingMachineGunInfantryDamage">Invading Machine Gun Infantry Damage</string>
    <string name="InvadingGuerrillaDamage">Invading Guerrilla Damage</string>
    <string name="InvadingHeavyTankDamage">Invading Heavy Tank Damage</string>
    <string name="InvadingBazookaDamage">Invading Bazooka Damage</string>
    <string name="InvadingAPCDamage">Invading APC Damage</string>
    <string name="InvadingArmoredCarDamage">Invading Armored Car Damage</string>
    <string name="InvadingTacticalHelicopterHealing">Invading Tactical Helicopter Healing</string>
    <string name="InvadingMRLDamage">Invading MRL Damage</string>
    <string name="InvadingFighterDamage">Invading Fighter Damage</string>
    <string name="InvadingBomberDamage">Invading Bomber Damage</string>
    <string name="InvadingParatroopersFromTransportsDamage">Invading Paratrooper Damage</string>
    <string name="InvadingGeneralsDamage">Invading Generals\' Damage</string>
    <string name="OilLooted">Oil Looted</string>
    <string name="GoldLooted">Gold Looted</string>
    <string name="FoodLooted">Food Looted</string>
    <string name="NationalTradeGoodLootChance">National Trade Good Loot Chance</string>
    <string name="AllResourceLooted">All Resource Looted</string>
    <string name="LootedResourceRefund">Looted Resource Refund</string>
    <string name="LibraryTechGoldCost">Library Tech Gold Cost</string>
    <string name="EnemyTowerHitpoints">Enemy Tower Hitpoints</string>
    <string name="EnemyCatapultHitpoints">Enemy Catapult Hitpoints</string>
    <string name="EnemyAntiTankGunHitpoints">Enemy Anti Tank Gun Hitpoints</string>
    <string name="EnemyRedoubtHitpoints">Enemy Redoubt Hitpoints</string>
    <string name="EnemySniperTowerHitpoints">Enemy Sniper Tower Hitpoints</string>
    <string name="EnemyAirDefenseHitpoints">Enemy Air Defense Hitpoints</string>
    <string name="EnemyMissileSiloHitpoints">Enemy Missile Silo Hitpoints</string>
    <string name="EnemyTowerDamage">Enemy Tower Damage</string>
    <string name="EnemyCatapultDamage">Enemy Catapult Damage</string>
    <string name="EnemyAntiTankGunDamage">Enemy Anti Tank Gun Damage</string>
    <string name="EnemyRedoubtDamage">Enemy Redoubt Damage</string>
    <string name="EnemySniperTowerDamage">Enemy Sniper Tower Damage</string>
    <string name="EnemyAirDefenseDamage">Enemy Air Defense Damage</string>
    <string name="EnemyMissileSiloDamage">Enemy Missile Silo Damage</string>
    <string name="GoldFromGoldMines">Gold from Gold Mines</string>
    <string name="FoodFromFruitTrees">Food from Fruit Trees</string>
    <string name="AllResourcesFromHunting">All Resources from Hunting</string>
    <string name="GoldFromCaravans">Gold from Caravans</string>
    <string name="FoodFromFarms">Food from Farms</string>
    <string name="OilFromOilWells">Oil from Oil Wells</string>
    <string name="VaultCapacity">Vault Capacity</string>
    <string name="VaultInterest">Vault Interest</string>
    <string name="ForestExpansionCostRefund">Forest Expansion Cost Refund</string>
    <string name="LibraryTechFoodCost">Library Tech Food Cost</string>
    <string name="LibraryTechOilCost">Library Tech Oil Cost</string>
    <string name="TowerHitpoints">Tower Hitpoints</string>
    <string name="CatapultHitpoints">Catapult Hitpoints</string>
    <string name="AntiTankGunHitpoints">Anti-Tank Gun Hitpoints</string>
    <string name="RedoubtHitpoints">Redoubt Hitpoints</string>
    <string name="SniperTowerHitpoints">Sniper Tower Hitpoints</string>
    <string name="AirDefenseHitpoints">Air Defense Hitpoints</string>
    <string name="MissileSiloHitpoints">Missile Silo Hitpoints</string>
    <string name="TowerDamage">Tower Damage</string>
    <string name="CatapultDamage">Catapult Damage</string>
    <string name="AntiTankGunDamage">Anti-Tank Gun Damage</string>
    <string name="RedoubtDamage">Redoubt Damage</string>
    <string name="SniperTowerDamage">Sniper Tower Damage</string>
    <string name="AirDefenseDamage">Air Defense Damage</string>
    <string name="MissileSiloDamage">Missile Silo Damage</string>
    <string name="AllEnemyDefensiveTowersHitpoints">All Enemy Defensive Towers Hitpoints</string>
    <string name="AllEnemyDefensiveTowersDamage">All Enemy Defensive Towers Damage</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="german" translatable="false">Deutsch</string>
    <string name="english" translatable="false">English</string>
</resources>