<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuItemAddRule"
        android:contentDescription="@string/add_rule"
        android:icon="@drawable/ic_add_black_24dp"
        android:onClick="addRule"
        android:title="@string/add_rule"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuItemStart"
        android:contentDescription="@string/start_service"
        android:icon="@drawable/ic_play_arrow_black_24dp"
        android:onClick="startService"
        android:title="@string/start_service"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuItemSettings"
        android:contentDescription="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:onClick="settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>