<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settingsTopAppBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/settings" />

    <RadioGroup
        android:id="@+id/settingsLanguageGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsLanguageHeader">

        <RadioButton
            android:id="@+id/settingsLanguageEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/settingsLanguageGerman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/german" />
    </RadioGroup>

    <TextView
        android:id="@+id/settingsLanguageHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/language"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTopAppBar" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settingsDebugMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="48dp"
        android:text="@string/debug_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTopAppBar" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settingsKeep3StarArtifacts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="48dp"
        android:text="@string/keep_3_artifacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsDebugMode" />

</androidx.constraintlayout.widget.ConstraintLayout>