<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="bhg.sucks.converter.SpinnerConverter" />

        <variable
            name="keepRule"
            type="bhg.sucks.model.KeepRule" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="bhg.sucks.activity.CreateKeepRuleActivity">

        <TextView
            android:id="@+id/id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:labelFor="@id/txtId"
            android:text="@string/id"
            app:layout_constraintBottom_toBottomOf="@+id/txtId"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@+id/txtId" />

        <EditText
            android:id="@+id/txtId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:enabled="false"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@{keepRule.id}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="12345" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:labelFor="@+id/txtName"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="@+id/txtName"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/txtId" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={keepRule.name}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/txtId"
            tools:text="Name" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:labelFor="@+id/inpCategory"
            android:text="@string/category"
            app:layout_constraintBottom_toBottomOf="@+id/inpCategory"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@+id/inpCategory" />

        <Spinner
            android:id="@+id/inpCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:entries="@array/array_categories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <TextView
            android:id="@+id/amountMatches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:labelFor="@+id/inpAmountMatches"
            android:text="@string/amount_matched"
            app:layout_constraintBottom_toBottomOf="@+id/inpAmountMatches"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/inpAmountMatches" />

        <Spinner
            android:id="@+id/inpAmountMatches"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:entries="@array/array_amount_matches"
            android:selectedItemPosition="@={SpinnerConverter.toInt(keepRule.amountMatches)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/inpCategory" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/id"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSelectedSkills"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inpAmountMatches" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="save"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>